tests/ui/issues/issue-13446.stderr
error[E0308]: mismatched types
  --> $DIR/issue-13446.rs:3:26
   |
LL | static VEC: [u32; 256] = vec![];
   |                          ^^^^^^ expected `[u32; 256]`, found `Vec<_>`
   |
   = note: expected array `[u32; 256]`
             found struct `Vec<_>`
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
